# namgen

./: .gitignore  CMakeLists.txt  COPYRIGHT  Dockerfile  README.md  aider-cmds  benchmark.sh  edit-formats  failLoopster.sh  fantasyloop.sh  ignorer.sh  iter.sh  models  score.csv  successLoopster.sh  test.sh  weak_models
.github/workflows/: namgen.yml
assets/adjectives/: adjectives.list
assets/nouns/: nouns.list
man/: namgen.1
scripts/: clearbranches.sh  count.sh  install.sh  mkmodels.sh  reset2main.sh  showscore.sh
src/: descriptions-prophecys_lib.cpp  descriptions-prophecys_lib.h  destiny-awokens_lib.cpp  destiny-awokens_lib.h  destiny-cabals_lib.cpp  destiny-cabals_lib.h  destiny-exos_lib.cpp  destiny-exos_lib.h  destiny-fallens_lib.cpp  destiny-fallens_lib.h  destiny-hives_lib.cpp  destiny-hives_lib.h  destiny-humans_lib.cpp  destiny-humans_lib.h  destiny-vexs_lib.cpp  destiny-vexs_lib.h  diablo-angels_lib.cpp  diablo-angels_lib.h  diablo-demons_lib.cpp  diablo-demons_lib.h  diablo-khazras_lib.cpp  diablo-khazras_lib.h  diablo-nephalems_lib.cpp  diablo-nephalems_lib.h  doctor_who-ice_warriors_lib.cpp  doctor_who-ice_warriors_lib.h  doctor_who-raxacoricofallapatorians_lib.cpp  doctor_who-raxacoricofallapatorians_lib.h  doctor_who-silurians_lib.cpp  doctor_who-silurians_lib.h  dragon_age-dwarfs_lib.cpp  dragon_age-dwarfs_lib.h  dragon_ball-frieza_clans_lib.cpp  dragon_ball-frieza_clans_lib.h  dragon_ball-hakaishins_lib.cpp  dragon_ball-hakaishins_lib.h  dragon_ball-humans_lib.cpp  dragon_ball-humans_lib.h  dragon_ball-others_lib.cpp  dragon_ball-others_lib.h  (+93 more)
test/: docker.bats  excludes  full.bats  test.bats  test.tpl  tester.sh
